feat: Creat Icons components and IconLink component. Add new routes. Create ViewHeader/Navigation

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,3 +19,20 @@ a {
 li {
   list-style: none;
 }
+
+.icon-link {
+  transition: all 0.3s;
+
+  path {
+    fill: $color-peach-main;
+    transition: all 0.3s;
+  }
+
+  &:hover {
+    background: $color-peach-main;
+
+    path {
+      fill: #fff;
+    }
+  }
+}
