feat: Create SingleView component, Add slider, add request for all images . fix: BreadsView

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -7,4 +7,7 @@ $color-violet: #B4B7FF;
 $color-green: #97EAB9;
 $color-orange: #FFD280;
 
+$hover-card-bg: rgba(255, 134, 142, 0.6);
+
 $main-font: 'Jost', sans-serif;
+$main-font-size:  500 20px/30px $main-font, sans-serif;
