--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -41,6 +41,16 @@ button {
     align-items: center;
     justify-content: flex-start;
   }
+
+  .body {
+    margin-top: 20px;
+
+
+    img {
+      width: 100%;
+      border-radius: 20px;
+    }
+  }
 }
 
 .icon-link,
