add: new pages(likes,dislikes,favorites), edit: BreedsView page, router

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 $color-main: #1d1d1d;
 $color-gray: #8C8C8C;
+$color-light-gray: #F8F8F7;
 $color-peach-main: #FF868E;
 $color-peach-secondary: #FBE0DC;
 $color-hover-peach: rgba(255, 134, 142, 0.6);
