--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,6 @@
 @import './font.scss';
 @import './variables.scss';
+@import './buttons.scss';
 @import './splide.scss';
 
 * {
@@ -21,9 +22,6 @@ li {
   list-style: none;
 }
 
-button {
-  cursor: pointer;
-}
 
 .view-container {
   padding: 30px 30px 18px;
@@ -40,7 +38,7 @@ button {
   .header {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
 
   .body {
@@ -54,33 +52,17 @@ button {
   }
 }
 
-.icon-link,
-.view-header__link {
+
+
+
+select {
   transition: all 0.3s;
-
-  path {
-    fill: $color-peach-main;
-    transition: all 0.3s;
-  }
-
+  outline: none;
   &:hover {
-    background: $color-peach-secondary;
+    border-color: $color-peach-secondary;
   }
-}
-
-.back-button {
-  transition: all 0.3s;
-
-  path {
-    fill: $color-peach-main;
-  }
-
-  &:hover {
-    background: $color-peach-main;
-
-    path {
-      filL: #fff;
-    }
+  &:focus {
+    border-color: $color-peach-main;
   }
 }
 
