fix: breeds view

--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -16,7 +16,15 @@ button {
   }
 }
 
-.back-button {
+.back-button,
+.upload-button {
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  background: $color-peach-secondary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: all 0.3s;
 
   path {
