--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -39,6 +39,9 @@ li {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    &.flex-start {
+      justify-content: flex-start;
+    }
   }
 
   .body {
@@ -86,4 +89,17 @@ select {
   max-width: 143px;
   text-align: center;
   margin-left: 10px;
+}
+
+
+.breeds-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 140px;
+  margin-top: 20px;
+  grid-gap: 20px;
+
+  &.single-grid {
+    grid-template-rows: auto;
+  }
 }
